# BMSTU_OpenGL_Labs

./: CMakeLists.txt  GLLib.h  README.md
GLLib/: CMakeLists.txt  Camera.h  GLLib.h  Window.h  WindowInitParams.h
GLLib/Primitives/: Circle.h  ConycalCilinder.h
GLLib/Types/: Color.h  Line.h  Vector2i.h  Vertex2.h
GLLib/glad/: CMakeLists.txt
GLLib/glad/include/glad/: glad.h
GLLib/glad/src/: glad.c
GLLib/include/GLLib/: Camera.h  GLLib.h  Window.h  WindowInitParams.h
GLLib/include/GLLib/Primitives/: Circle.h  ComplexPolygon.h  ConnycalCilinderGLM.h  ConycalCilinder.h  Cube.h  Object.h  PolygonClip.h
GLLib/include/GLLib/Types/: Color.h  Mat.h  Quad.h  Shader.h  Vector2.h  Vector3.h  Vector4.h  Vertex2.h  Vertex3.h
GLLib/include/GLLib/UI/: Label.h
GLLib/include/GLLib/Utils/: TextRenderer.h  Timer.h
lab1/: CMakeLists.txt  ReadMe.md  main.cpp
lab2/: CMakeLists.txt  ReadMe.md  main.cpp
lab3/: CMakeLists.txt  ReadMe.md  main.cpp
lab4/: CMakeLists.txt  ReadMe.md  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/utils/: camera.h  shader_m.h
