cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 17)
project(labs)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(glfw3 REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
add_subdirectory(lab1)
add_subdirectory(lab2)
add_subdirectory(lab3)

